improve null-analysis
- upgrade EEA
- make null-analysis more strict
- fix null errors

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>